--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,13 +34,14 @@ set(pbrpc_HDRS
 
 add_library(pbrpc ${pbrpc_SRCS})
 
-if(NOT BUILD_SHARED_LIBS)
-add_definitions(-DPBRPC_BUILT_AS_STATIC)
-endif()
+GENERATE_EXPORT_HEADER(pbrpc
+                        BASE_NAME PBRPC
+                        EXPORT_MACRO_NAME PBRPC_EXPORT
+                        EXPORT_FILE_NAME pbrpc_export.h
+                        STATIC_DEFINE PBRPC_BUILT_AS_STATIC
+                        )
 
-target_link_libraries(pbrpc
-    pbrpc_proto
-)
+target_link_libraries(pbrpc pbrpc_proto)
 
 set(INS_INCLUDE_DIR
     "/pbrpc"
@@ -58,3 +59,7 @@ install(TARGETS ${INS_TARGETS}
 )
 
 install(FILES ${pbrpc_HDRS} DESTINATION "include${INS_INCLUDE_DIR}" COMPONENT headers)
+
+
+
+
