--- a/proto/CMakeLists.txt
+++ b/proto/CMakeLists.txt
@@ -23,9 +23,12 @@ PROTOBUF_GENERATE_CPP(proto_SRCS proto_HDRS ${proto_FILES})
 set_source_files_properties(${proto_FILES} PROPERTIES GENERATED TRUE)
 
 # Build library, link as static
-add_library(pbrpc_proto STATIC ${proto_SRCS})
+add_library(pbrpc_proto OBJECT ${proto_SRCS})
 target_link_libraries(pbrpc_proto protobuf)
+target_include_directories(pbrpc_proto PUBLIC "${pbrpc_proto_BINARY_DIR}")
 
+
+ 
 set(INS_INCLUDE_DIR "/pbrpc")
 
 # Install
@@ -39,3 +42,5 @@ install(TARGETS ${INS_TARGETS}
 )
 
 install(FILES ${proto_HDRS} DESTINATION "include${INS_INCLUDE_DIR}" COMPONENT headers)
+
+
